// FindMe MVP Database Schema

Table users {
  id uuid [primary key, note: 'Auto generated UUID']
  username varchar [unique, not null]
  identity_key_dh text [not null, note: 'X25519 DH public key for initial handshake']
  identity_key_sign text [not null, note: 'Ed25519 public key for signing prekeys']
  created_at timestamp [default: `now()`]
}

Table friendships {
  user_id_a uuid [ref: > users.id]
  user_id_b uuid [ref: > users.id]
  status varchar [note: '"pending" or "accepted"']
  created_at timestamp

  indexes {
    (user_id_a, user_id_b) [unique, note: 'Prevents redundant friend requests']
  }
}

Table location_inbox {
  id uuid [primary key]
  sender_id uuid [ref: > users.id, note: 'Whose location?']
  receiver_id uuid [ref: > users.id, note: 'Who receives the location?']
  encrypted_payload text [not null]
  created_at timestamp [default: `now()`]
}

Table signed_prekeys {
  user_id uuid [pk, ref: - users.id, note: 'Signal Signed PreKey owner']
  key_id integer [not null]
  public_key text [not null]
  signature text [not null, note: 'Signed by users.public_key (Identity Key)']
  created_at timestamp [default: `now()`]
}

Table onetime_prekeys {
  user_id uuid [ref: > users.id, note: 'Signal One-Time PreKey pool']
  key_id integer [not null]
  public_key text [not null]
  created_at timestamp [default: `now()`]

  indexes {
    (user_id, key_id) [pk]
  }
}

